# adk-rust-mcp-toolkit

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.kiro/hooks/: audit-documentation.kiro.hook  update-api-docs.kiro.hook  update-readme-new-server.kiro.hook  update-server-docs.kiro.hook
.kiro/settings/: mcp.json
.kiro/specs/rust-mcp-genmedia/: design.md  requirements.md  tasks.md
.kiro/steering/: documentation-maintenance.md  rmcp-server-patterns.md
adk-rust-mcp-avtool/: Cargo.toml  README.md
adk-rust-mcp-avtool/src/: handler.rs  lib.rs  main.rs  server.rs
adk-rust-mcp-avtool/tests/: integration_test.rs
adk-rust-mcp-common/: Cargo.toml  README.md
adk-rust-mcp-common/src/: auth.rs  auth_test.rs  config.rs  config_test.rs  error.rs  error_test.rs  gcs.rs  gcs_test.rs  lib.rs  models.rs  otel.rs  otel_test.rs  server.rs  server_test.rs  tracing.rs  transport.rs  transport_test.rs
adk-rust-mcp-image/: Cargo.toml  README.md
adk-rust-mcp-image/src/: handler.rs  lib.rs  main.rs  resources.rs  server.rs
adk-rust-mcp-image/tests/: integration_test.rs
adk-rust-mcp-multimodal/: Cargo.toml  README.md
adk-rust-mcp-multimodal/src/: handler.rs  lib.rs  main.rs  resources.rs  server.rs
adk-rust-mcp-multimodal/tests/: debug_api.rs  integration_test.rs
adk-rust-mcp-music/: Cargo.toml  README.md
adk-rust-mcp-music/src/: handler.rs  lib.rs  main.rs  server.rs
adk-rust-mcp-music/tests/: integration_test.rs
adk-rust-mcp-speech/: Cargo.toml  README.md
adk-rust-mcp-speech/proptest-regressions/: handler.txt
adk-rust-mcp-speech/src/: handler.rs  lib.rs  main.rs  server.rs
adk-rust-mcp-speech/tests/: integration_test.rs
adk-rust-mcp-video/: Cargo.toml  README.md
adk-rust-mcp-video/src/: handler.rs  lib.rs  main.rs  resources.rs  server.rs
adk-rust-mcp-video/tests/: integration_test.rs
docs/: README.md  configuration.md  development.md  feature-parity-analysis.md
docs/api/: README.md  avtool.md  image.md  multimodal.md  music.md  speech.md  video.md
docs/servers/: avtool.md  image.md  multimodal.md  music.md  speech.md  video.md
examples/: .env.example  README.md
examples/creative-studio/: Cargo.toml
examples/creative-studio/src/: main.rs
examples/image-agent/: Cargo.toml
examples/image-agent/src/: main.rs
examples/media-pipeline/: Cargo.toml
examples/media-pipeline/src/: main.rs
examples/music-agent/: Cargo.toml
examples/music-agent/src/: main.rs
examples/speech-agent/: Cargo.toml
examples/speech-agent/src/: main.rs
examples/video-agent/: Cargo.toml
examples/video-agent/src/: main.rs
tests/workspace_integration/: Cargo.toml
tests/workspace_integration/src/: input_validation.rs  lib.rs  output_format.rs  server_startup.rs  tool_schema.rs
