[workspace]
resolver = "2"
members = [
    "adk-rust-mcp-image",
    "adk-rust-mcp-video",
    "adk-rust-mcp-music",
    "adk-rust-mcp-speech",
    "adk-rust-mcp-multimodal",
    "adk-rust-mcp-avtool",
    "tests/workspace_integration",
]
exclude = [
    "adk-rust-mcp-common",
    "examples/image-agent",
    "examples/video-agent",
    "examples/music-agent",
    "examples/speech-agent",
    "examples/media-pipeline",
    "examples/creative-studio",
]

[workspace.package]
edition = "2024"
version = "0.3.0"
authors = ["James Karanja Maina"]
homepage = "https://www.zavora.ai"
license = "Apache-2.0"
repository = "https://github.com/zavora-ai/adk-rust-mcp-toolkit"
rust-version = "1.85"
keywords = ["mcp", "ai", "generative-media", "vertex-ai", "google-cloud"]
categories = ["multimedia", "api-bindings", "development-tools"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# MCP SDK
rmcp = { version = "0.14", features = ["server", "transport-io", "transport-streamable-http-server"] }

# Testing
proptest = "1.5"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenTelemetry (optional) - versions must match opentelemetry-gcloud-trace 0.21 compatibility
opentelemetry = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
opentelemetry-gcloud-trace = "0.21"
tracing-opentelemetry = "0.31"

# Environment
dotenvy = "0.15"

# JSON Schema generation
schemars = "0.8"

# Async traits
async-trait = "0.1"

# Base64 encoding
base64 = "0.22"

# UUID generation
uuid = { version = "1.11", features = ["v4"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP server (re-exported from rmcp but needed for direct use)
axum = "0.8"

# Internal crates
adk-rust-mcp-common = "0.3.0"
