[package]
name = "adk-rust-mcp-common"
description = "Shared utilities for ADK Rust MCP GenMedia servers"
readme = "README.md"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
otel = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-gcloud-trace", "tracing-opentelemetry"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
async-trait.workspace = true
base64.workspace = true
urlencoding = "2.1"
gcp_auth = "0.12"
clap.workspace = true
rmcp.workspace = true
axum.workspace = true

# OpenTelemetry dependencies (optional)
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-gcloud-trace = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
tempfile = "3.24"
wiremock = "0.6"
tokio-test = "0.4"
