[package]
name = "image-agent"
version = "0.1.0"
edition = "2024"
description = "ADK agent for image generation using MCP toolkit"
license = "Apache-2.0"
publish = false

[dependencies]
# Use local adk-rust crates for latest MCP features
adk-agent = { path = "../../../adk-rust/adk-agent" }
adk-core = { path = "../../../adk-rust/adk-core" }
adk-model = { path = "../../../adk-rust/adk-model" }
adk-tool = { path = "../../../adk-rust/adk-tool", features = ["http-transport"] }
adk-cli = { path = "../../../adk-rust/adk-cli" }
tokio = { version = "1.43", features = ["full"] }
anyhow = "1.0"
dotenvy = "0.15"
async-trait = "0.1"
