[package]
name = "speech-agent"
version = "0.1.0"
edition = "2024"
description = "ADK agent for text-to-speech using MCP toolkit"
license = "Apache-2.0"
publish = false

[dependencies]
# ADK-Rust crates from crates.io
adk-rust = { version = "0.2", features = ["full"] }
rmcp = { version = "0.14", features = ["client", "transport-streamable-http-client"] }
tokio = { version = "1.43", features = ["full"] }
anyhow = "1.0"
dotenvy = "0.15"
async-trait = "0.1"
serde_json = "1.0"
