[package]
name = "video-agent"
version = "0.1.0"
edition = "2024"
description = "ADK agent for video generation using MCP toolkit"
license = "Apache-2.0"
publish = false

[dependencies]
adk-rust = "0.2"
adk-agent = "0.2"
adk-core = "0.2"
adk-model = "0.2"
adk-tool = "0.2"
adk-cli = "0.2"
rmcp = { version = "0.9", features = ["client", "transport-child-process"] }
tokio = { version = "1.43", features = ["full"] }
anyhow = "1.0"
dotenvy = "0.15"
async-trait = "0.1"
